# libusbf

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  README.md  autogen.sh  configure.ac  libusbf.pc.in
.github/workflows/: build.yml  tests.yml
examples/: Makefile.am  sourcesink.c
include/: libusbf.h
src/: Makefile.am  descs.h  libusbf.c  libusbf_private.h
tests/: README.md  conftest.py  setup.sh  teardown.sh  test_all_ctrl_recip.py  test_altsetting.py  test_bulk.py  test_cancel.py  test_control.py  test_halt.py  test_hid.py  test_iad.py  test_interrupt.py  test_mixed.py  test_speed.py  test_ss.py  test_two_interfaces.py
tests/gadgets/: Makefile  all_ctrl_recip.c  altsetting_loopback.c  bulk_loopback.c  cancel_loopback.c  control_loopback.c  halt_loopback.c  hid_minimal.c  iad_minimal.c  interrupt_loopback.c  mixed_endpoints.c  speed_query.c  ss_bulk_loopback.c  two_interfaces.c
